# remarks

./: .gitignore  .gitmodules  README.md  conftest.py  devbox.json  poetry.toml  pyproject.toml  requirements.txt  test_initial.py  testing.md
demo/on-computable-numbers/xochitl/: d3954b55-8429-4220-a2d5-64f1daab9727.content  d3954b55-8429-4220-a2d5-64f1daab9727.metadata
demo/on-computable-numbers/xochitl/d3954b55-8429-4220-a2d5-64f1daab9727/: 3e38ed38-08b7-42d2-8bbe-fa8b936b4a45.rm  a8cee983-7203-4218-a1af-e2f4fcf3d073-metadata.json  a8cee983-7203-4218-a1af-e2f4fcf3d073.rm  bd1287ac-b54f-4024-a117-020194385543.rm
demo/output/DEMO - What is Life? by Erwin Schrödinger/md/: 0.md
demo/xochitl/: a6d4246e-a8f7-4b60-b1d8-d6fdb2692898.content  a6d4246e-a8f7-4b60-b1d8-d6fdb2692898.metadata
demo/xochitl/a6d4246e-a8f7-4b60-b1d8-d6fdb2692898/: 87ad0138-1864-45d9-ae11-b0523b4d2dc0.rm
remarks/: Document.py  __init__.py  __main__.py  dimensions.py  remarks.py  test_initial.py  utils.py
remarks/conversion/: __init__.py  drawing.py  ocrmypdf.py  parsing.py  text.py
remarks/output/: ObsidianMarkdownFile.py
tests/in/highlighter-test/: 683cb9eb-4ac1-4814-95c7-6410bffd818b.content  683cb9eb-4ac1-4814-95c7-6410bffd818b.epub  683cb9eb-4ac1-4814-95c7-6410bffd818b.metadata  683cb9eb-4ac1-4814-95c7-6410bffd818b.pagedata
tests/in/highlighter-test/683cb9eb-4ac1-4814-95c7-6410bffd818b/: 184d0d14-d0c8-4963-a42d-b94f247e4ff2.rm  2b6c756a-2827-45bc-8624-dfbec38cb671.rm  66683180-2bb7-443f-b053-c927f42ae774.rm  7404fab4-8ad9-4b26-913e-cafc5721aafd.rm  b08a4218-5da7-4d46-b17c-d19eac148180.rm  b6550a51-266b-4c40-81c7-7732d6b74871.rm  c1391415-7724-4c5b-9dd4-5fbe83f86523.rm  dec7d296-f64b-41e9-a1a3-1a139d441411.rm
tests/in/pdf_with_multiple_added_pages/: 6c4fa130-6a4a-405e-9726-438ba8bc8238.content  6c4fa130-6a4a-405e-9726-438ba8bc8238.metadata  6c4fa130-6a4a-405e-9726-438ba8bc8238.pagedata
tests/in/pdf_with_multiple_added_pages/6c4fa130-6a4a-405e-9726-438ba8bc8238/: 22b7acbe-87ac-4b9e-9a90-782ab8d2eec5.rm  27ad7c27-e291-455e-8aee-dd2d1c76f6d1.rm  69bee56e-53c4-494d-ad4c-096b9ed89db6.rm  724f5adb-ad4a-411a-84e8-b16b8df1c33f.rm  7f2387c3-9556-43b6-be38-3047c9c5070c.rm  e0278669-de83-4474-a382-a7da5a05f484.rm
tests/in/v2_book/: 5abfb1fb-ce7d-492c-9816-82b6902c9a85.content  5abfb1fb-ce7d-492c-9816-82b6902c9a85.metadata  5abfb1fb-ce7d-492c-9816-82b6902c9a85.pagedata
tests/in/v2_book_with_ann/: 78320749-67ca-4622-8674-331bfb4a3d30.content  78320749-67ca-4622-8674-331bfb4a3d30.metadata  78320749-67ca-4622-8674-331bfb4a3d30.pagedata
tests/in/v2_book_with_ann/78320749-67ca-4622-8674-331bfb4a3d30/: 196973e4-2945-43ff-b8c8-ea57419e15a8.rm  31429ab5-f48e-4e49-93d0-8413bc78c504.rm  545eaac7-1a90-4249-95e3-b3b4b5d87941.rm  60fc31e3-bba1-4e18-bebc-6d760cde6a84.rm  83dc10ed-78a1-4b21-9f45-99e5bf0f0522.rm  8d7fc5fe-0ad8-4d53-9cc2-c8c0812aba72.rm  9062e27b-790f-43dc-ac69-1b42bcbda798.rm  (+8 more)
tests/in/v2_notebook_complex/: bce041cf-ce31-4ede-ad11-2e53db0f6c77.content  bce041cf-ce31-4ede-ad11-2e53db0f6c77.metadata  bce041cf-ce31-4ede-ad11-2e53db0f6c77.pagedata
tests/in/v3_annotated_notebook/: 1f830c35-1e0d-4ba1-80aa-5acc85d8859a.content  1f830c35-1e0d-4ba1-80aa-5acc85d8859a.metadata
tests/in/v3_coords_notebook/: 84099c77-bd7b-4a0d-9e06-a11c89e2bca4.content  84099c77-bd7b-4a0d-9e06-a11c89e2bca4.metadata  84099c77-bd7b-4a0d-9e06-a11c89e2bca4.pagedata
tests/in/v3_simple_notebook/: f8000ca5-cc1f-42eb-bf9e-3ca1145c38d6.content  f8000ca5-cc1f-42eb-bf9e-3ca1145c38d6.metadata
(+10 files in other folders)
