[tool.poetry]
name = "remarks"
version = "0.3.0"
description = "Extract your annotations (highlights, scribbles, ) and convert them to markdown, pdf, png, and svg. Works with documents annotated on reMarkable™ paper tablets."
authors = ["lucasrla <lucasrla@users.noreply.github.com>"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/lucasrla/remarks"
keywords = ["remarkable-tablet", "remarkable", "markdown", "png", "pdf", "svg", "annotations", "highlights", "scribbles"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Utilities"
]

# https://python-poetry.org/docs/dependency-specification/
[tool.poetry.dependencies]
python = "^3.10"
Shapely = "^1.8.5.post1"
PyMuPDF = "^1.20.2"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry>=1.1.14"]
build-backend = "poetry.masonry.api"
