[tool.poetry]
name = "remarks"
version = "0.3.0"
description = "Extract your annotations (highlights, scribbles, ) and convert them to markdown, pdf, png, and svg. Works with documents annotated on reMarkable™ paper tablets."
authors = ["lucasrla <lucasrla@users.noreply.github.com>"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/lucasrla/remarks"
keywords = ["remarkable-tablet", "remarkable", "markdown", "png", "pdf", "svg", "annotations", "highlights", "scribbles"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Utilities"
]

# https://python-poetry.org/docs/dependency-specification/
[tool.poetry.dependencies]
python = "^3.10.9"
Shapely = "^2.0.1"
PyMuPDF = "^1.21.1"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
pytest = "^7.2.2"

[build-system]
# https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
# https://github.com/python-poetry/poetry/releases/tag/1.3.0
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
