[tool.poetry]
name = "remarks"
version = "0.3.7"
description = "Extract annotations (highlights and scribbles) from PDF, EPUB, and notebooks marked with reMarkable™ paper tablets. Export to Markdown, PDF, PNG, and SVG."
authors = ["lucasrla <lucasrla@users.noreply.github.com>"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/lucasrla/remarks"
keywords = ["remarkable-tablet", "remarkable", "markdown", "png", "pdf", "svg", "annotations", "highlights", "scribbles"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Utilities"
]

# https://python-poetry.org/docs/dependency-specification/
[tool.poetry.dependencies]
python = "^3.10"
Shapely = "^1.8.5.post1"
PyMuPDF = "1.22.5"
pytest = "^7.2.0"
rmscene = { git = "https://github.com/azeirah/rmscene.git#prod"}
syrupy = "^4.0.8"
pyyaml = "^6.0.1"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
pytest = "^7.2.2"

[build-system]
# https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
# https://github.com/python-poetry/poetry/releases/tag/1.3.0
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
